compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__case_tuple_guard_2.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 375
expression: "case #(1, 2) { x if x == #(1, 1.0) -> 1 }"
snapshot_kind: text
---
----- SOURCE CODE
case #(1, 2) { x if x == #(1, 1.0) -> 1 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:21
  │
1 │ case #(1, 2) { x if x == #(1, 1.0) -> 1 }
  │                     ^^^^^^^^^^^^^^

Expected type:

    #(Int, Int)

Found type:

    #(Int, Float)
